# MangaShell

./: pyproject.toml
src/: add.py  log.py  mangashell.py  mongo.py  notify.py  richConsole.py  update.py
